implement edit and delete club api & add statistical api for top scorer,assists, yellow/red cards & fix fetchall matchactions without filtering error